style sheet.css
/* ... */
#contact-man-name {
    margin: 1vh 1vh 1vh 2vh;
    font-size: 4vh;
    color: #00000099;
    font-weight: bolder;
    text-decoration:underline;
}

#dialogue-box {
    width: 60vw;
    max-width: 70vw;
    height: 30vh;
    border: 0.5vh solid #0000006f;
    background-color: #00000039;
    border-radius: 5vh;
    cursor: pointer;
    display:flex;
}

#dialogue-box img {
    height:30vh;
    max-width: 15vw;
    border-radius: 5vh;
}

.dialogue-text {
    width:35vw;
    padding: 1vh 4vh 1vh 4vh;
    margin-left: 3vh;
    font-size: 3vh;
    font-family: 'Clock Font', Consolas;
    color: #000000a6;
}

.dialogue-text p{
    margin:0px;
}

#fcf-form-id {
    margin-left: 3vh;
    margin-top: 2vh;
    font-size: 3vh;
    font-family: 'Clock Font', Consolas;
    color: #00000099;
}
.fcf-form-row{
    display:flex;
}

.fcf-form-group{
    margin-right: 3vh;
}

#fcf-form-id input {
    width: 45vh;
    max-width: 27.5vw;
    height: 4vh;
    font-size: 3vh;
    font-family: 'Clock Font', Consolas;
    border: 0.5vh solid #0000006f;
    background-color: #ffffff39;
    border-radius: 1vh;
}

#fcf-form-id textarea {
    width: 100vh;
    max-width: 55vw;
    font-size: 3vh;
    font-family: 'Clock Font', Consolas;
    border: 0.5vh solid #0000006f;
    background-color: #ffffff39;
    border-radius: 1vh;
}

#fcf-form-id button {
    font-size: 2.5vh;
    font-family: 'Clock Font', Consolas;
    border: 0.5vh solid #0000006f;
    border-radius: 1vh;
    color: #00000099;
    border-radius: 1vh;
    min-width:25vh;
    height: 4vh;
}

#orientation-warning {
    width: 100%;
    height: 100%;
    z-index: 9999;
    position: fixed;
    color: #000000cb;
    background-color: #e1e1e1;
    background-image: url("assets/background.png");
    display: flex;
    flex-direction: column;
    justify-content: center;
    visibility: hidden;
    text-align: center;
    font-size: 5vw;
    top: 0px;
}

#orientation-warning img{
    width: 55vw;
    height: 55vw;
    border-radius: 5vw;
}

#orientation-warning i {
    font-size: 20vw;
    color: #0000004c;
}

#orientation-warning h1 {
    font-size: 8vw;
    font-weight: bolder;
    margin: 1vh 0vh;
}

#orientation-warning h2{
    font-size: 6vw;
    margin: 1vh 0vh;
}

#orientation-message{
    margin: 1vh 0vh;
}

@media (orientation: landscape) {
    #orientation-warning{
        visibility: hidden;
    }
  } 
  @media (orientation: portrait) {
    #orientation-warning{
        visibility:visible;
    }
  }

@media (pointer: fine) {

    .projectCarousel {
        overflow-x: hidden;
    }

    #profile-section {
        height: 70vh;
    }

    #nav-menu {
        height: 70vh;
    }
}

